// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<p>
  issue.changelog.removed.issue.changelog.field.foo
</p>
`;

exports[`should render correctly branch diff 1`] = `
<p>
  issue.change.from_branch.foo.bar
</p>
`;

exports[`should render correctly branch diff 2`] = `
<p>
  issue.change.from_non_branch.foo.bar
</p>
`;

exports[`should render correctly branch diff 3`] = `
<p>
  issue.change.from_branch.foo.bar
</p>
`;

exports[`should render correctly effort diff 1`] = `
<p>
  issue.changelog.changed_to.issue.changelog.field.effort.work_duration.x_minutes.12
</p>
`;

exports[`should render correctly effort diff 2`] = `
<p>
  issue.changelog.changed_to.issue.changelog.field.effort.work_duration.x_minutes.12 (issue.changelog.was.work_duration.x_minutes.10)
</p>
`;

exports[`should render correctly effort diff 3`] = `
<p>
  issue.changelog.removed.issue.changelog.field.effort (issue.changelog.was.work_duration.x_minutes.10)
</p>
`;

exports[`should render correctly file diff 1`] = `
<p>
  issue.change.file_move.foo/bar.js.bar/baz.js
</p>
`;

exports[`should render correctly line diff 1`] = `
<p>
  issue.changelog.line_removed_X.80
</p>
`;
